--- a/content/publication/IRAL/cite.bib
+++ b/content/publication/IRAL/cite.bib
@@ -1,8 +1,7 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
-  pages={1--6},
-  year={2013},
-  organization={IEEE}
+@articles{IRAL,
+  title={The effect of written text on comprehension of spoken English as a foreign language: A replication study},
+  author={Xuan, Wang and Elsa, Tragant},
+  Journal={International Review in Applied Linguistics in Language Teaching},
+  pages={1--21},
+  year={2019},
 }
